[r=rvb][bug=][author=mthaddon] Make the navigation elements visible.

--- a/docs/_templates/maas/static/css/main.css
+++ b/docs/_templates/maas/static/css/main.css
@@ -9,7 +9,7 @@ pre {
 
 div.document {
   width: 984px;
-  margin: 30px auto 0 auto;
+  margin: 10px auto 0 auto;
 }
 
 div.body h1 {
